clang/test/BSC/Negative/OwnedStruct/global-var/global-var.cbs
// RUN: %clang_cc1 -verify %s

_Owned struct S {
_Public:
  int a;
  int b;
};

S s1 = {}; // expected-error {{type of global variable cannot qualified by '_Owned' }}
S s2 = { 2, 3 }; // expected-error {{type of global variable cannot qualified by '_Owned' }}
S s3 = { .a = 1, .b = 2}; // expected-error {{type of global variable cannot qualified by '_Owned' }}

_Owned struct U<T> {
_Public:
  T a;
  int* p;
};

U<int> u1 = {}; // expected-error {{type of global variable cannot qualified by '_Owned' }}
U<double> u2 = { 1.5, 0 }; // expected-error {{type of global variable cannot qualified by '_Owned' }}
U<unsigned int> u3 = { 2, 0 }; // expected-error {{type of global variable cannot qualified by '_Owned' }}